bug fixes and add functions

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div class="help-btn">?</div>
       <h1>Wordle</h1>
     </header>
+    <div class="answer"></div>
     <div class="menu-container">
       <div class="menu">
         <br />
